--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,18 @@ spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.html
 
 json.graph.static.file.name=source/sample.json
+
+
+
+# Enable global CORS configuration
+spring.web.cors.enabled=true
+# Specify the allowed origins (e.g., allow all origins with "*")
+spring.web.cors.allowed-origins=*
+# Specify the allowed HTTP methods (e.g., allow all methods)
+spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+# Specify the allowed headers
+spring.web.cors.allowed-headers=*
+# Specify whether credentials are allowed
+spring.web.cors.allow-credentials=true
+
+
