--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,17 @@ spring.web.cors.allowed-headers=*
 spring.web.cors.allow-credentials=true
 
 
+
+# Set the logging level
+logging.level.root=INFO
+logging.level.in.rk.process=DEBUG
+
+# Log file configuration
+logging.file.name=mega-applogs.log
+logging.file.path=logs
+logging.logback.rollingpolicy.max-file-size=10MB
+logging.logback.rollingpolicy.max-history=30
+
+# Additional logging configuration
+logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
