--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -36,3 +36,13 @@ logging.logback.rollingpolicy.max-history=30
 # Additional logging configuration
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
+
+# H2 Database Configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=password
+spring.h2.console.enabled=true
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.hibernate.ddl-auto=update
